WIP Geom refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,9 @@ set(UM2_HEADERS
     "include/um2/geometry/Point.hpp"
     "include/um2/geometry/AxisAlignedBox.hpp"
     "include/um2/geometry/LineSegment.hpp"
-    # "include/um2/geometry/Triangle.hpp"
-    # "include/um2/geometry/Quadrilateral.hpp"
+    "include/um2/geometry/Triangle.hpp"
+    "include/um2/geometry/Quadrilateral.hpp"
+    "include/um2/geometry/QuadraticSegment.hpp"
     #    # mesh
     #    "include/um2/mesh/RegularGrid.hpp"
     #    "include/um2/mesh/RegularPartition.hpp"
