--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,9 +23,9 @@ add_um2_test(./math/Mat.cpp)
 add_um2_test(./geometry/Point.cpp)
 add_um2_test(./geometry/AxisAlignedBox.cpp)
 add_um2_test(./geometry/LineSegment.cpp)
-#add_um2_test(./geometry/Triangle.cpp)
-#add_um2_test(./geometry/Quadrilateral.cpp)
-#add_um2_test(./geometry/QuadraticSegment.cpp)
+add_um2_test(./geometry/Triangle.cpp)
+add_um2_test(./geometry/Quadrilateral.cpp)
+add_um2_test(./geometry/QuadraticSegment.cpp)
 #
 ## ------------------------------------------------------------------------------
 ## mesh
