WIP: Quadratic Quad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(UM2_HEADERS
     "include/um2/geometry/Quadrilateral.hpp"
     "include/um2/geometry/QuadraticSegment.hpp"
     "include/um2/geometry/QuadraticTriangle.hpp"
+    "include/um2/geometry/QuadraticQuadrilateral.hpp"
     #    # mesh
     #    "include/um2/mesh/RegularGrid.hpp"
     #    "include/um2/mesh/RegularPartition.hpp"
