--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -42,7 +42,12 @@ add_um2_test(./mesh/RegularGrid.cpp)
 add_um2_test(./mesh/RegularPartition.cpp)
 add_um2_test(./mesh/TriMesh.cpp)
 add_um2_test(./mesh/io_abaqus.cpp)
-#
+
+# ------------------------------------------------------------------------------
+# gmsh
+# ------------------------------------------------------------------------------
+add_um2_test(./gmsh/base_gmsh_api.cpp)
+
 ## ------------------------------------------------------------------------------
 ## ray_casting
 ## ------------------------------------------------------------------------------
