--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,8 @@ set(UM2_HEADERS
     "include/um2/mesh/CellType.hpp"
     "include/um2/mesh/MeshType.hpp"
     "include/um2/mesh/MeshFile.hpp"
-    #"include/um2/mesh/io_abaqus.hpp"
-    #    "include/um2/mesh/io_xdmf.hpp"
+    "include/um2/mesh/io_abaqus.hpp"
+    "include/um2/mesh/io_xdmf.hpp"
     "include/um2/mesh/RegularGrid.hpp"
     "include/um2/mesh/RegularPartition.hpp"
     "include/um2/mesh/TriMesh.hpp"
