--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ add_um2_test(./mesh/io_xdmf.cpp)
 # gmsh
 # ------------------------------------------------------------------------------
 add_um2_test(./gmsh/base_gmsh_api.cpp)
+add_um2_test(./gmsh/model.cpp)
 
 ## ------------------------------------------------------------------------------
 ## ray_casting
