--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,10 +86,14 @@ set(UM2_HEADERS
     "include/um2/mesh/RectilinearGrid.hpp"
     "include/um2/mesh/RectilinearPartition.hpp"
     "include/um2/mesh/TriMesh.hpp"
+    "include/um2/mesh/QuadMesh.hpp"
+    "include/um2/mesh/QuadraticTriMesh.hpp"
     # gmsh
     "include/um2/gmsh/base_gmsh_api.hpp"
     "include/um2/gmsh/io.hpp"
     "include/um2/gmsh/model.hpp"
+    # mpact
+    #"include/um2/mpact/SpatialPartition.hpp"
     #    # ray_casting
     #    "include/um2/ray_casting/Ray.hpp"
     # visualization
