--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,6 +45,8 @@ add_um2_test(./mesh/RectilinearGrid.cpp)
 add_um2_test(./mesh/RectilinearPartition.cpp)
 add_um2_test(./mesh/TriMesh.cpp)
 add_um2_test(./mesh/QuadMesh.cpp)
+add_um2_test(./mesh/QuadraticTriMesh.cpp)
+add_um2_test(./mesh/QuadraticQuadMesh.cpp)
 add_um2_test(./mesh/io_abaqus.cpp)
 add_um2_test(./mesh/io_xdmf.cpp)
 
