--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -59,7 +59,7 @@ add_um2_test(./gmsh/model.cpp)
 # ------------------------------------------------------------------------------
 # mpact
 # ------------------------------------------------------------------------------
-#add_um2_test(./mpact/SpatialPartition.cpp)
+add_um2_test(./mpact/SpatialPartition.cpp)
 
 ## ------------------------------------------------------------------------------
 ## ray_casting
