--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_um2_test(./common/String.cpp)
 add_um2_test(./common/Log.cpp)
 add_um2_test(./common/ShortString.cpp)
 add_um2_test(./common/Color.cpp)
+add_um2_test(./common/to_vecvec.cpp)
 
 # ------------------------------------------------------------------------------
 # math
@@ -51,15 +52,16 @@ add_um2_test(./mesh/io_abaqus.cpp)
 add_um2_test(./mesh/io_xdmf.cpp)
 
 # ------------------------------------------------------------------------------
+# mpact
+# ------------------------------------------------------------------------------
+add_um2_test(./mpact/SpatialPartition.cpp)
+
+
+# ------------------------------------------------------------------------------
 # gmsh
 # ------------------------------------------------------------------------------
 add_um2_test(./gmsh/base_gmsh_api.cpp)
 add_um2_test(./gmsh/model.cpp)
-
-# ------------------------------------------------------------------------------
-# mpact
-# ------------------------------------------------------------------------------
-add_um2_test(./mpact/SpatialPartition.cpp)
 
 ## ------------------------------------------------------------------------------
 ## ray_casting
