--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,6 +1,12 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_benchmark.cmake)
 
 # ------------------------------------------------------------------------------
+# math 
+# ------------------------------------------------------------------------------
+add_um2_benchmark(./math/exp.cpp)
+add_um2_benchmark(./math/sqrt.cpp)
+
+# ------------------------------------------------------------------------------
 # geometry
 # ------------------------------------------------------------------------------
 add_um2_benchmark(./geometry/morton_sort_points.cpp)
