--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -48,6 +48,7 @@ add_um2_test(./mesh/TriMesh.cpp)
 add_um2_test(./mesh/QuadMesh.cpp)
 add_um2_test(./mesh/QuadraticTriMesh.cpp)
 add_um2_test(./mesh/QuadraticQuadMesh.cpp)
+add_um2_test(./mesh/MeshFile.cpp)
 add_um2_test(./mesh/io_abaqus.cpp)
 add_um2_test(./mesh/io_xdmf.cpp)
 
