--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
-name: CI 
+name: CI
 
-on: [push]
+on: [ push ]
 
 jobs:
   main:
@@ -11,8 +11,8 @@ jobs:
         compiler: [ gcc, clang ]
         build_type: [ Release, Debug ]
         cuda: [ OFF ]
-        openmp: [ OFF]
-        vis: [OFF]
+        openmp: [ OFF ]
+        vis: [ OFF ]
         dev_mode: [ OFF, ON ]
 
     name: "${{ matrix.compiler }}, ${{ matrix.build_type }}, OMP=${{ matrix.openmp }}, 
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up gcc 
+      - name: Set up gcc
         shell: bash
         if: matrix.compiler == 'gcc'
         run: |
@@ -30,9 +30,9 @@ jobs:
           echo "CC=gcc-12" >> $GITHUB_ENV 
           echo "CXX=g++-12" >> $GITHUB_ENV 
 
-      - name: Set up clang 
+      - name: Set up clang
         shell: bash
-        if: matrix.compiler == 'clang' 
+        if: matrix.compiler == 'clang'
         run: |
           sudo apt -y update
           sudo apt install -y clang-14
@@ -70,13 +70,15 @@ jobs:
         run: make -C build format-check
 
       - name: Run tests
-        run: 
+        run:
           make -j -C build test
 
       - name: Upload coverage
         if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc'
         run: |
-            sudo apt install -y python3 python3-pip
-            python3 -m pip install --upgrade pip
-            python3 -m pip install cpp-coveralls
-            coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/  -t 0DVBjvDnRVu0ePXv7D7lYse8SLklwKXwn --gcov /usr/bin/gcov-12
+          sudo apt install -y python3 python3-pip
+          python3 -m pip install --upgrade pip
+          python3 -m pip install cpp-coveralls
+          coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/ --gcov /usr/bin/gcov-12
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
