WIP: geom update

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,18 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 
 # ------------------------------------------------------------------------------
+# stdlib 
+# ------------------------------------------------------------------------------
+add_um2_test(./stdlib/algorithm/copy.cpp)
+add_um2_test(./stdlib/memory/addressof.cpp)
+add_um2_test(./stdlib/memory/construct_at.cpp)
+add_um2_test(./stdlib/Vector.cpp)
+add_um2_test(./stdlib/sto.cpp) 
+add_um2_test(./stdlib/String.cpp)
+
+# ------------------------------------------------------------------------------
 # common 
 # ------------------------------------------------------------------------------
-add_um2_test(./common/memory/addressof.cpp)
-add_um2_test(./common/memory/construct_at.cpp)
-add_um2_test(./common/Vector.cpp)
-add_um2_test(./common/sto.cpp) 
-add_um2_test(./common/String.cpp)
 add_um2_test(./common/Log.cpp)
 add_um2_test(./common/ShortString.cpp)
 add_um2_test(./common/Color.cpp)
@@ -33,48 +38,48 @@ add_um2_test(./geometry/QuadraticSegment.cpp)
 add_um2_test(./geometry/QuadraticTriangle.cpp)
 add_um2_test(./geometry/QuadraticQuadrilateral.cpp)
 
-# ------------------------------------------------------------------------------
-# mesh
-# ------------------------------------------------------------------------------
-# Copy the mesh files to the built test directory
-file(COPY ${PROJECT_SOURCE_DIR}/tests/mesh/mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-
-add_um2_test(./mesh/CellType.cpp)
-add_um2_test(./mesh/RegularGrid.cpp)
-add_um2_test(./mesh/RegularPartition.cpp)
-add_um2_test(./mesh/RectilinearGrid.cpp)
-add_um2_test(./mesh/RectilinearPartition.cpp)
-add_um2_test(./mesh/TriMesh.cpp)
-add_um2_test(./mesh/QuadMesh.cpp)
-add_um2_test(./mesh/QuadraticTriMesh.cpp)
-add_um2_test(./mesh/QuadraticQuadMesh.cpp)
-add_um2_test(./mesh/MeshFile.cpp)
-add_um2_test(./mesh/io_abaqus.cpp)
-add_um2_test(./mesh/io_xdmf.cpp)
-
-# ------------------------------------------------------------------------------
-# mpact
-# ------------------------------------------------------------------------------
-add_um2_test(./mpact/SpatialPartition.cpp)
-
-
-# ------------------------------------------------------------------------------
-# gmsh
-# ------------------------------------------------------------------------------
-add_um2_test(./gmsh/base_gmsh_api.cpp)
-add_um2_test(./gmsh/model.cpp)
-
 ## ------------------------------------------------------------------------------
-## ray_casting
+## mesh
 ## ------------------------------------------------------------------------------
-#add_um2_test(./ray_casting/intersect/Ray-LineSegment.cpp)
-
-# ------------------------------------------------------------------------------
-# visualization 
-# ------------------------------------------------------------------------------
-add_um2_test(./visualization/Image2D.cpp)
-
+## Copy the mesh files to the built test directory
+#file(COPY ${PROJECT_SOURCE_DIR}/tests/mesh/mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 #
-#if (UM2_ENABLE_VIS)
-#  add_um2_test(shader ./visualization/shader.cpp)
-#endif()
+#add_um2_test(./mesh/CellType.cpp)
+#add_um2_test(./mesh/RegularGrid.cpp)
+#add_um2_test(./mesh/RegularPartition.cpp)
+#add_um2_test(./mesh/RectilinearGrid.cpp)
+#add_um2_test(./mesh/RectilinearPartition.cpp)
+#add_um2_test(./mesh/TriMesh.cpp)
+#add_um2_test(./mesh/QuadMesh.cpp)
+#add_um2_test(./mesh/QuadraticTriMesh.cpp)
+#add_um2_test(./mesh/QuadraticQuadMesh.cpp)
+#add_um2_test(./mesh/MeshFile.cpp)
+#add_um2_test(./mesh/io_abaqus.cpp)
+#add_um2_test(./mesh/io_xdmf.cpp)
+#
+## ------------------------------------------------------------------------------
+## mpact
+## ------------------------------------------------------------------------------
+#add_um2_test(./mpact/SpatialPartition.cpp)
+#
+#
+## ------------------------------------------------------------------------------
+## gmsh
+## ------------------------------------------------------------------------------
+#add_um2_test(./gmsh/base_gmsh_api.cpp)
+#add_um2_test(./gmsh/model.cpp)
+#
+### ------------------------------------------------------------------------------
+### ray_casting
+### ------------------------------------------------------------------------------
+##add_um2_test(./ray_casting/intersect/Ray-LineSegment.cpp)
+#
+## ------------------------------------------------------------------------------
+## visualization 
+## ------------------------------------------------------------------------------
+#add_um2_test(./visualization/Image2D.cpp)
+#
+##
+##if (UM2_ENABLE_VIS)
+##  add_um2_test(shader ./visualization/shader.cpp)
+##endif()
