--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,19 +77,19 @@ set(UM2_HEADERS
     "include/um2/geometry/QuadraticSegment.hpp"
     "include/um2/geometry/QuadraticTriangle.hpp"
     "include/um2/geometry/QuadraticQuadrilateral.hpp"
-    #    # physics
-    #    "include/um2/physics/Material.hpp"
-    #    # mesh
-    #    "include/um2/mesh/CellType.hpp"
-    #    "include/um2/mesh/MeshType.hpp"
-    #    "include/um2/mesh/MeshFile.hpp"
-    #    "include/um2/mesh/io_abaqus.hpp"
+    # physics
+    "include/um2/physics/Material.hpp"
+    # mesh
+    "include/um2/mesh/RegularGrid.hpp"
+    "include/um2/mesh/RegularPartition.hpp"
+    "include/um2/mesh/RectilinearGrid.hpp"
+    "include/um2/mesh/RectilinearPartition.hpp"
+    "include/um2/mesh/CellType.hpp"
+    "include/um2/mesh/MeshType.hpp"
+    "include/um2/mesh/MeshFile.hpp"
+    #"include/um2/mesh/io_abaqus.hpp"
     #    "include/um2/mesh/io_xdmf.hpp"
     #    "include/um2/mesh/io.hpp"
-    #    "include/um2/mesh/RegularGrid.hpp"
-    #    "include/um2/mesh/RegularPartition.hpp"
-    #    "include/um2/mesh/RectilinearGrid.hpp"
-    #    "include/um2/mesh/RectilinearPartition.hpp"
     #    "include/um2/mesh/TriMesh.hpp"
     #    "include/um2/mesh/QuadMesh.hpp"
     #    "include/um2/mesh/QuadraticTriMesh.hpp"
