--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,13 +50,13 @@ add_um2_test(./mesh/RectilinearGrid.cpp)
 add_um2_test(./mesh/RectilinearPartition.cpp)
 add_um2_test(./mesh/MeshType.cpp)
 #add_um2_test(./mesh/CellType.cpp)
-#add_um2_test(./mesh/TriMesh.cpp)
-#add_um2_test(./mesh/QuadMesh.cpp)
-#add_um2_test(./mesh/QuadraticTriMesh.cpp)
-#add_um2_test(./mesh/QuadraticQuadMesh.cpp)
+add_um2_test(./mesh/TriMesh.cpp)
+add_um2_test(./mesh/QuadMesh.cpp)
+add_um2_test(./mesh/QuadraticTriMesh.cpp)
+add_um2_test(./mesh/QuadraticQuadMesh.cpp)
 add_um2_test(./mesh/MeshFile.cpp)
-#add_um2_test(./mesh/io_abaqus.cpp)
-#add_um2_test(./mesh/io_xdmf.cpp)
+add_um2_test(./mesh/io_abaqus.cpp)
+add_um2_test(./mesh/io_xdmf.cpp)
 #
 ## ------------------------------------------------------------------------------
 ## mpact
