--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,19 +57,19 @@ add_um2_test(./mesh/QuadraticQuadMesh.cpp)
 add_um2_test(./mesh/MeshFile.cpp)
 add_um2_test(./mesh/io_abaqus.cpp)
 add_um2_test(./mesh/io_xdmf.cpp)
-#
-## ------------------------------------------------------------------------------
-## mpact
-## ------------------------------------------------------------------------------
-#add_um2_test(./mpact/SpatialPartition.cpp)
-#
-#
-## ------------------------------------------------------------------------------
-## gmsh
-## ------------------------------------------------------------------------------
-#add_um2_test(./gmsh/base_gmsh_api.cpp)
-#add_um2_test(./gmsh/model.cpp)
-#
+
+# ------------------------------------------------------------------------------
+# mpact
+# ------------------------------------------------------------------------------
+add_um2_test(./mpact/SpatialPartition.cpp)
+
+# ------------------------------------------------------------------------------
+# gmsh
+# ------------------------------------------------------------------------------
+add_um2_test(./gmsh/base_gmsh_api.cpp)
+add_um2_test(./gmsh/io.cpp)
+# add_um2_test(./gmsh/model.cpp)
+
 ### ------------------------------------------------------------------------------
 ### ray_casting
 ### ------------------------------------------------------------------------------
